--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <div class="logo"> Atlas Supermercados</div>
     <div class="search-bar">
-      <input type="text" placeholder="Buscar produtos...">
+      <input type="text" id="searchInput" placeholder="Buscar produtos...">
       <button>Pesquisar</button>
     </div>
 
@@ -53,3 +53,4 @@
 <script src="index.js"></script>
 </body>
 </html>
+
